# contextengine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  repository_setup_guide.md
docs/: GraphQL_Guide.md  Setup_Guide.md
src/context_engine/: main.py
src/context_engine/application/: knowledge_graph_loader.py  knowledge_graph_nodes.json  service.py
src/context_engine/services/: dgraph_service.py
src/context_engine/tools/: context.py  greet.py
tests/: __init__.py  conftest.py  test_context.py  test_dgraph_service.py  test_main.py
